src/test/ui/borrowck/borrowck-closures-unique-imm.stderr
error[E0502]: cannot borrow `this.x` as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-closures-unique-imm.rs:23:14
   |
LL |         let p = &this.x;
   |                  ------ immutable borrow occurs here
LL |         &mut this.x; //~ ERROR cannot borrow
   |              ^^^^^^ mutable borrow occurs here
LL |     };
   |     - immutable borrow ends here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0502`.
